--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="password">Пароль</string>
     <string name="label_dots">Заголовок</string>
     <string name="text_dots">Описание</string>
+    <string name="location">Адрес метки</string>
 </resources>
